[package]
name = "libil2cpp-parser"
version = "0.1.0"
edition = "2021"
license = "GLWTSPL"
authors = ["commonuserlol"]

[features]
progress_bar = []

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
colour = "2.1.0"
futures = "0.3.31"
futures-util = "0.3.31"
itertools = "0.13.0"
markdown-table = "0.2.0"
reqwest = { version = "0.12.9", features = ["stream"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tar = "0.4.41"
tokio = { version = "1.39.3", features = ["full"] }
unity-version = { git = "https://github.com/commonuserlol/unity-version-rs", version = "0.1.0" }
xz2 = "0.1.7"
